Atualizacao do site

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website">
-        <meta property="og:url" content="https://portifolio-izabele.netlify.app/">
+        <meta property="og:url" content="https://portifolio-izabele-site.netlify.app/">
         <meta property="og:title" content="Izabele - UX/UI Designer &  Android Developer ">
         <meta property="og:description"
             content="Portfólio criativo de Izabele - Desenvolvedora Android e UX/UI Designer com experiência internacional.">
@@ -20,7 +20,7 @@
 
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image">
-        <meta property="twitter:url" content="https://portifolio-izabele.netlify.app/">
+        <meta property="twitter:url" content="https://portifolio-izabele-site.netlify.app/>
         <meta property="twitter:title" content="Izabele - Android Developer & UX/UI Designer">
         <meta property="twitter:description"
             content="Portfólio criativo de Izabele - Desenvolvedora Android e UX/UI Designer">
@@ -308,7 +308,7 @@
                                 <div class="project-links">
                                     <button class="project-link" onclick="openModal('portfolio-details')">Ver
                                         Projeto</button>
-                                    <a href="https://github.com/IsabeleGC/Site-Izabele-Portifolio" class="project-link"
+                                    <a href="https://github.com/IsabeleGC/Portfolio-Izabele" class="project-link"
                                         target="_blank">GitHub</a>
                                 </div>
                             </div>
@@ -410,7 +410,7 @@
                                         <a href="#" class="btn btn-primary" target="_blank"
                                             data-pt="🔗 Ver Projeto Live" data-en="🔗 View Live Project">🔗 Ver Projeto
                                             Live</a>
-                                        <a href="https://github.com/IsabeleGC/Site-Izabele-Portifolio"
+                                        <a href="https://github.com/IsabeleGC/Portfolio-Izabele"
                                             class="btn btn-secondary" target="_blank" data-pt="📁 Ver no GitHub"
                                             data-en="📁 View on GitHub">📁 Ver no GitHub</a>
                                     </div>
@@ -441,7 +441,7 @@
                                 <div class="project-links">
                                     <button class="project-link" onclick="openModal('quiz-details')">Ver
                                         Projeto</button>
-                                    <a href="https://github.com/IsabeleGC/Site-Izabele-Portifolio" class="project-link"
+                                    <a href="https://github.com/IsabeleGC/Portfolio-Izabele" class="project-link"
                                         target="_blank">GitHub</a>
                                 </div>
                             </div>
@@ -538,7 +538,7 @@
                                         <div class="project-links">
                                             <button class="project-link" onclick="openModal('quiz')"> Start Quiz
                                                 🎯</button>
-                                            <a href="https://github.com/IsabeleGC/Site-Izabele-Portifolio"
+                                            <a href="https://github.com/IsabeleGC/Portfolio-Izabele"
                                                 class="project-link" target="_blank">GitHub</a>
                                         </div>
                                     </div>
